# chython

./: CODE_REVIEW_REPORT.md  pyproject.toml
.github/workflows/: python-package.yml
chython/: exceptions.py
chython/algorithms/: _isomorphism.pyx  depict.py  isomorphism.py  mcs.py  morgan.py  rings.py  smarts.py  smiles.py  stereo.py  x3dom.py
chython/algorithms/aromatics/: kekule.py
chython/algorithms/calculate2d/: __init__.py  molecule.py
chython/algorithms/fingerprints/: linear.py  morgan.py
chython/algorithms/mapping/: fixmapper.py  groups.py
chython/algorithms/standardize/: _groups.py  molecule.py  reaction.py  resonance.py  salts.py  saturation.py
chython/algorithms/standardize/test/: test_tautomers.py
chython/algorithms/tautomers/: __init__.py  acid_base.py
chython/containers/: __init__.py  bonds.py  cgr.py  cgr_query.py  graph.py  molecule.py  query.py  rdkit.py  reaction.py
chython/containers/tests/: test_cgr.py  test_pipeline.py  test_roundtrip_serialization.py
chython/files/: MRVrw.py  PDBrw.py  RDFrw.py  SDFrw.py  _xyz.pyx  xyz.py
chython/files/daylight/: parser.py  smarts.py  smiles.py  tokenize.py
chython/files/daylight/test/: test_daylight_smarts.py  test_parser.py  test_tokenize.py
chython/files/mdl/: read.py
chython/periodictable/: __init__.py
chython/periodictable/base/: __init__.py  core.py  dynamic.py  dynamic_query.py  element.py  query.py  vector.py
chython/reactor/: reactor.py
chython/reactor/reactions/: __init__.py  ufe.py
chython/reactor/retro/: __init__.py
chython/utils/: free_wilson.py  grid.py  retro.py
