[project]
name = "chython-synplan"
version = "1.91"
description = "Library for processing molecules and reactions in python way"
authors = [
  { name = "Ramil Nugmanov", email = "nougmanoff@protonmail.com" }
]
license = { text = "LGPL-3.0-or-later" }
readme = "README.rst"
requires-python = ">=3.10,<3.13"
classifiers = [
  "Environment :: Plugins",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "cachedmethods>=0.1.4",
  "lazy-object-proxy>=1.6",
  "lxml>=4.1",
  "mini-racer>=0.12.4"
]

[project.urls]
homepage = "https://github.com/chython/chython"
documentation = "https://chython.readthedocs.io"

[project.optional-dependencies]
rdkit = ["rdkit>=2023.9"]

[tool.poetry]
packages = [
    { include = "chython" }
]
include = [
  "chython/*/*.pyd",
  "chython/*/*.so",
  "chython/files/libinchi/libinchi.*"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
nbsphinx = ">=0.9.3"
pandoc = ">=2.3"
rdkit = ">=2023.9.1"
ipython = ">=8.12.1"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[build-system]
requires = ["poetry-core>=2.0.1", "setuptools", "cython>=3.0.5"]
build-backend = "poetry.core.masonry.api"
